--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@google/genai": "^1.16.0",
     "@hookform/resolvers": "^3.10.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -56,9 +56,10 @@
     "lucia": "^3.2.2",
     "lucide-react": "^0.454.0",
     "next": "^15.5.2",
+    "next-auth": "^4.24.13",
     "next-themes": "latest",
     "openai": "^5.16.0",
-    "prisma": "^5.22.0",
+    "prisma": "^6.18.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
